--- a/src/backend/views/index.ejs
+++ b/src/backend/views/index.ejs
@@ -39,9 +39,9 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <h1>
+    <!-- <h4>
         <%= email%>
-    </h1>
+    </h4> -->
     <!-- <form action="" method="post">
         <div className="mb-3">
             <input type="password" name="password" id="password" placeholder="password" /><br />
@@ -49,23 +49,31 @@
         <input type="password" name="confirm-password" id="confirm-password" placeholder="confirm-password" /><br />
         <input type="submit" value="submit" />
     </form> -->
+    <br>
+    <div class="container">
+        <form action="" method="post">
+            <div class="row">
+                <div class="col-lg-3">
 
-    <form action="" method="post">
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control " name="password" id="password"
+                            placeholder="password" />
+                    </div>
 
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
+                        <input type="password" class="form-control " name="confirm-password" id="confirm-password"
+                            placeholder="confirm-password" />
 
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
+                    </div>
 
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
-
-    </form>
+        </form>
+    </div>
+    </div>
+    </div>
 
 </body>
 
